URLPopUpSection: Decrease label size and fix link alignment
Adapt patch to LibreOffice Online.

--- a/browser/css/lool.css
+++ b/browser/css/lool.css
@@ -980,7 +980,8 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	max-width: 188px;
-	color: #0078a8;
+	color: #0078A8;
+	vertical-align: middle;
 }
 
 .hyperlink-popup-btn {
@@ -1173,6 +1174,7 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 #hyperlink-pop-up-preview p {
 	text-overflow: ellipsis;
 	overflow: hidden;
+	font-size: 14px;
 }
 
 .prevent-select {
